bugfix for pfe-tabs vertical on mobile

--- a/elements/pfe-tabs/src/pfe-tabs.scss
+++ b/elements/pfe-tabs/src/pfe-tabs.scss
@@ -150,7 +150,9 @@ $LOCAL-VARIABLES: map-deep-merge($LOCAL-VARIABLES, (
 }
 :host([vertical][pfe-variant="wind"]) .tabs-prefix,
 :host([vertical][pfe-variant="wind"]) .tabs-suffix {
+@media screen and (min-width: #{pfe-breakpoint(md)}) {
     background-color: pfe-local(BorderColor, $region: tabs);
+}
 }
 
 // Horizontal
